Fixed base64 compatibility with oracle jdk7